# mucom88android

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/bkc/mucom88/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: help.txt
app/src/main/cpp/: adpcm.cpp  adpcm.h  callback.cpp  callback.h  cmucom.cpp  cmucom.h  headers.h  main.cpp  membuf.cpp  membuf.h  mucom88config.h  mucomerror.cpp  mucomerror.h  mucomvm.cpp  mucomvm.h  mucomvm_os.h  native-lib.cpp  osdep.cpp  osdep.h  soundbuf.cpp  soundbuf.h  voiceformat.h
app/src/main/cpp/Z80/: Z80.cpp  Z80.h
app/src/main/cpp/bin_15/: bin_errmsg15.h  bin_expand15.h  bin_msub15.h  bin_muc88_15.h  bin_music15.h  bin_music2_15.h  bin_ssgdat15.h  bin_time15.h  bin_voice15.h
app/src/main/cpp/bin_17/: bin_errmsg.h  bin_expand.h  bin_msub.h  bin_muc88.h  bin_music.h  bin_music2.h  bin_smon.h  bin_ssgdat.h  bin_time.h  bin_voice.h
app/src/main/cpp/bin_em/: bin_errmsg_em.h  bin_expand_em.h  bin_kbd_em.h  bin_msub_em.h  bin_muc88_em.h  bin_music_em.h  bin_pcmldr_em.h  bin_smon_em.h  bin_ssgdat_em.h  bin_time_em.h
app/src/main/cpp/dummy/: osdep_dummy.cpp  osdep_dummy.h
app/src/main/cpp/fmgen/: file.cpp  file.h  fmgen.cpp  fmgen.h  fmtimer.cpp  fmtimer.h  headers.h  opm.cpp  opna.cpp  opna.h  psg.cpp  psg.h  types.h
app/src/main/cpp/module/: module_test.cpp  mucom_module.cpp  mucom_module.h
app/src/main/cpp/plugin/: mucom88if.h  plugin.cpp  plugin.h
app/src/main/cpp/sdl/: audiobuffer.cpp  audiobuffer.h  audiosdl.cpp  audiosdl.h  audiotime.cpp  audiotime.h  miniplay.cpp  osdep_sdl.cpp  osdep_sdl.h
app/src/main/cpp/tests/: compile_test.cpp  depent_test.cpp  module_test.cpp
app/src/main/cpp/utils/: logwrite.h  pcmentry.cpp  pcmentry.h  pcmtool.cpp  pcmtool.h  pcmtool_main.cpp  s98write.cpp  s98write.h  vgmwrite.cpp  vgmwrite.h  wavwrite.cpp  wavwrite.h
app/src/main/cpp/utils/codeconv/: Makefile  codeconv.h  codeconv_dummy.cpp  codeconv_dummy.h  codeconv_iconv.cpp  codeconv_iconv.h  codeconv_if.h  test_codeconv.cpp
app/src/main/cpp/win32/: SCCIDefines.h  osdep_win.cpp  osdep_win.h  realchip.cpp  realchip.h  scci.h  soundds.cpp  soundds.h
app/src/main/java/com/bkc/mucom88/: AudioBaseActivity.java  AudioRenderer.java  AudioService.java  EditorFragment.java  GeneralUtils.java  MainActivity.java  ResultFragment.java  TextEditor.java
app/src/main/res/layout/: editor_fragment.xml  fragment_result.xml  layout.xml  nav_header_main.xml
app/src/main/res/menu/: drawer.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
app/src/test/java/com/bkc/mucom88/: ExampleUnitTest.java
fileselect/: build.gradle  fileselect-release.aar
(+1 files in other folders)
